# SHOT

./: .clang-format  .cmake-format  .gitignore  .gitmodules  .osrl  .travis.yml  AUTHORS  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  INSTALL  README  README.md  gamsinst.sh  nvs21.osrl  smallinvSNPr1b010-011.osrl  test.py  tln4.osrl  tln5.osrl  tls4.osrl  tmp_pyomo.osrl
src/: CMakeLists.txt  CMakeLists_2.1.10.  CallbackData.h  DualSolver.cpp  DualSolver.h  Enums.h  Environment.cpp  Environment.h  EventHandler.cpp  EventHandler.h  GAMS2OS.cpp  GAMS2OS.h  Iteration.cpp  Iteration.h  Model.cpp  Model.h  Output.cpp  Output.h  PrimalSolver.cpp  PrimalSolver.h  ProcessInfo.cpp  ProcessInfo.h  Report.cpp  Report.h  Results.cpp  Results.h  SHOT.bak  SHOT.cpp  SHOTConfig.h.in  SHOTSolver.cpp  SHOTSolver.h  SHOTpy.cpp  Settings.cpp  Settings.h  Shared.h  SharedOS.h  Shotpy.cpp  SolutionStrategy.cpp  SolutionStrategy.h  Solver.cpp  (+11 more)
src/ConstraintSelectionStrategy/: ConstraintSelectionStrategyMostDeviating.cpp  ConstraintSelectionStrategyMostDeviating.h  IConstraintSelectionStrategy.cpp  IConstraintSelectionStrategy.h
src/ConstraintToleranceUpdateStrategy/: ConstraintToleranceUpdateStrategyBase.cpp  ConstraintToleranceUpdateStrategyBase.h  ConstraintToleranceUpdateStrategyDecreasing.cpp  ConstraintToleranceUpdateStrategyDecreasing.h  IConstraintToleranceUpdateStrategy.cpp  IConstraintToleranceUpdateStrategy.h
src/GAMS/: GAMS2OS.cpp  GAMS2OS.h  GamsNLinstr.h
src/LinesearchMethod/: ILinesearchMethod.cpp  ILinesearchMethod.h  LinesearchMethodBisection.cpp  LinesearchMethodBisection.h  LinesearchMethodBoost.cpp  LinesearchMethodBoost.h
src/MILPSolver/: IMILPSolutionLimitStrategy.cpp  IMILPSolutionLimitStrategy.h  IMILPSolver.cpp  IMILPSolver.h  IRelaxationStrategy.cpp  IRelaxationStrategy.h  MILPSolutionLimitStrategyAdaptive.cpp  MILPSolutionLimitStrategyAdaptive.h  MILPSolutionLimitStrategyIncrease.cpp  MILPSolutionLimitStrategyIncrease.h  MILPSolutionLimitStrategyUnlimited.cpp  MILPSolutionLimitStrategyUnlimited.h  MILPSolverBase.cpp  MILPSolverBase.h  MILPSolverCallbackBase.cpp  MILPSolverCallbackBase.h  MILPSolverCplex.cpp  MILPSolverCplex.h  MILPSolverCplexExperimental.cpp  MILPSolverCplexExperimental.h  MILPSolverCplexLazy.cpp  MILPSolverCplexLazy.h  MILPSolverCplexLazyOriginalCB.cpp  MILPSolverCplexLazyOriginalCB.h  MILPSolverGurobi.cpp  MILPSolverGurobi.h  MILPSolverGurobiLazy.cpp  MILPSolverGurobiLazy.h  MILPSolverOsiCbc.cpp  MILPSolverOsiCbc.h  RelaxationStrategyAdaptive.cpp  RelaxationStrategyAdaptive.h  RelaxationStrategyBase.cpp  RelaxationStrategyBase.h  RelaxationStrategyNone.cpp  RelaxationStrategyNone.h  RelaxationStrategyStandard.cpp  RelaxationStrategyStandard.h
src/MIPSolver/: IMILPSolutionLimitStrategy.h  IMILPSolver.h  IMIPSolutionLimitStrategy.cpp  IMIPSolutionLimitStrategy.h  IMIPSolver.cpp  IMIPSolver.h  IRelaxationStrategy.cpp  IRelaxationStrategy.h  MILPSolutionLimitStrategyAdaptive.cpp  MILPSolverBase.h  MILPSolverCallbackBase.h  MILPSolverCplex.cpp  MILPSolverCplex.h  MILPSolverCplexLazy.cpp  MILPSolverCplexLazy.h  MILPSolverCplexLazyOriginalCB.cpp  MILPSolverCplexLazyOriginalCB.h  MILPSolverGurobi.h  MILPSolverGurobiLazy.cpp  MILPSolverGurobiLazy.h  MILPSolverOsiCbc.cpp  MIPSolutionLimitStrategyAdaptive.cpp  MIPSolutionLimitStrategyAdaptive.h  MIPSolutionLimitStrategyIncrease.cpp  MIPSolutionLimitStrategyIncrease.h  MIPSolutionLimitStrategyUnlimited.cpp  MIPSolutionLimitStrategyUnlimited.h  MIPSolverBase.cpp  MIPSolverBase.h  MIPSolverCallbackBase.cpp  MIPSolverCallbackBase.h  MIPSolverCbc.cpp  MIPSolverCbc.h  MIPSolverCplex.cpp  MIPSolverCplex.h  MIPSolverCplexLazy.cpp  MIPSolverCplexLazy.h  MIPSolverCplexLazyOriginalCallback.cpp  MIPSolverCplexLazyOriginalCallback.h  MIPSolverCplexSingleTree.cpp  (+21 more)
src/Model/: AuxiliaryVariables.cpp  AuxiliaryVariables.h  AuxilliaryVariables.h  Constraints.cpp  Constraints.h  ModelShared.h  ModelStructs.h  NonlinearExpressions.cpp  NonlinearExpressions.h  ObjectiveFunction.cpp  ObjectiveFunction.h  OptimizationProblem.cpp  OptimizationProblem.h  Problem.cpp  Problem.h  Simplifications.cpp  Simplifications.h  SingleVariableTransformations.cpp  SingleVariableTransformations.h  Terms.cpp  Terms.h  Variables.cpp  Variables.h
src/ModelingSystem/: EntryPointsGAMS.cpp  IModelingSystem.h  ModelingSystemAMPL.cpp  ModelingSystemAMPL.h  ModelingSystemGAMS.cpp  ModelingSystemGAMS.h  ModelingSystemOS.cpp  ModelingSystemOS.h  ModelingSystemOSiL.cpp  ModelingSystemOSiL.h
src/NLPSolver/: INLPSolver.cpp  INLPSolver.h  NLPIpoptSolver.cpp  NLPIpoptSolver.h  NLPSolverBase.cpp  NLPSolverBase.h  NLPSolverCouenneMinimax.cpp  NLPSolverCouenneMinimax.h  NLPSolverCouenneMinimax.h.old  NLPSolverCuttingPlane.cpp  NLPSolverCuttingPlane.h  NLPSolverCuttingPlaneMinimax.cpp  NLPSolverCuttingPlaneMinimax.h  NLPSolverCuttingPlaneRelaxed.cpp  NLPSolverCuttingPlaneRelaxed.h  NLPSolverGAMS.cpp  NLPSolverGAMS.h  NLPSolverIPOptBase.cpp  NLPSolverIPOptBase.h  NLPSolverIPOptMinimax.cpp  NLPSolverIPOptMinimax.h  NLPSolverIPOptRelaxed.cpp  NLPSolverIPOptRelaxed.h  NLPSolverIpoptBase.cpp  NLPSolverIpoptBase.h  NLPSolverIpoptMinimax.cpp  NLPSolverIpoptMinimax.h  NLPSolverIpoptRelaxed.cpp  NLPSolverIpoptRelaxed.h  NLPSolverSHOT.cpp  NLPSolverSHOT.h
src/OptProblems/: OptProblem.cpp  OptProblem.h  OptProblemNLPMinimax.cpp  OptProblemNLPMinimax.h  OptProblemNLPRelaxed.cpp  OptProblemNLPRelaxed.h  OptProblemNLPSHOTMinimax.cpp  OptProblemNLPSHOTMinimax.h  OptProblemOriginal.cpp  OptProblemOriginal.h  OptProblemOriginalLinearObjective.cpp  OptProblemOriginalLinearObjective.h  OptProblemOriginalNonlinearObjective.cpp  OptProblemOriginalNonlinearObjective.h  OptProblemOriginalQuadraticObjective.cpp  OptProblemOriginalQuadraticObjective.h
src/RootsearchMethod/: IRootsearchMethod.h  (+2 more)
test/: CMakeLists.txt  CbcTest.cpp  CplexTest.cpp  GAMSTest.cpp  GurobiTest.cpp  HighsTest.cpp  IpoptTest.cpp  ModelTest.cpp  OSTest.cpp  SHOTSolverTest.cpp  SettingsTest.cpp  SignomialReformulationTest.cpp  SolverTest.cpp  shotpy.py  test.py  test_ex1223b.py  test_problem_api.py
(+284 files in other folders)
